minor layout bug fixes after deploy

--- a/style.css
+++ b/style.css
@@ -195,3 +195,24 @@ body {
   border: none;
   outline: 0;
 }
+
+@media (max-width:768px){
+  .container{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    }
+    .darkModeButton{
+      width: 95%;
+    }
+    .addTask{
+      width: 90%;
+    }
+    .inputField{
+      width: 86%;
+      overflow-x: auto;
+    }
+    .newTask{
+      width: 92%;
+    }
+}
